--- a/authsecfront1/package.json
+++ b/authsecfront1/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.6",
     "cros": "^1.0.1",
+    "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
     "node-libs-browser": "^2.2.1",
@@ -21,6 +22,7 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
