--- a/authsecfront1/package.json
+++ b/authsecfront1/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.6",
     "cros": "^1.0.1",
+    "date-fns": "^2.29.3",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
