--- a/authsecfront1/package.json
+++ b/authsecfront1/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@react-oauth/google": "^0.12.2",
     "@stomp/stompjs": "^7.1.1",
     "@testing-library/dom": "^10.4.0",
@@ -30,6 +32,7 @@
     "recharts": "^2.15.3",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:1217",
