Mise à jour du fichier .properties du backend

--- a/E-InternMatchBack/src/main/resources/application.properties
+++ b/E-InternMatchBack/src/main/resources/application.properties
@@ -27,25 +27,12 @@ spring.mail.protocol=smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.port=587
-# spring.mail.username=salimaelqartit.20@gmail.com
-# spring.mail.password=yppbjmnxbqjeroul
-spring.mail.username=einternmatch@gmail.com
-spring.mail.password=dezrhwkscipjzdwu
+spring.mail.username=****@gmail.com
+spring.mail.password=*****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-# spring.security.oauth2.client.registration.google.client-id=12030874472-fk8qrfa64n3442orkv28moqolng600v6.apps.googleusercontent.com
-# spring.security.oauth2.client.registration.google.client-secret=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
-# spring.security.oauth2.client.registration.google.scope=openid, profile, email
-# spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-# spring.security.oauth2.client.registration.google.client-name=Google
-
-# spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-# spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
-# spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-# spring.security.oauth2.client.provider.google.user-name-attribute=sub
-
-spring.security.oauth2.client.registration.google.client-id=12030874472-nfoeu6m2ks2va2p8s9nq6djmhdvpb9a6.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=****
+spring.security.oauth2.client.registration.google.client-secret=***
 spring.security.oauth2.client.registration.google.scope=openid, profile, email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.client-name=Google
